--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "outdoor-frontend",
-  "private": true,
+  "homepage": ".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
