--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "npx vitest",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
